Edit more menu, module, ...

--- a/admin_vi-VN/vi-VN.com_content.sys.ini
+++ b/admin_vi-VN/vi-VN.com_content.sys.ini
@@ -12,21 +12,21 @@ COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC="Hiển thị bài viết duy nhất."
 COM_CONTENT_ARTICLE_VIEW_DEFAULT_OPTION="Mặc định"
 COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE="Single Article"
 COM_CONTENT_ARTICLES="Bài viết"
-COM_CONTENT_CATEGORIES="Thể loại"
+COM_CONTENT_CATEGORIES="Danh mục"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Hiển thị một danh sách của tất cả các loại bài viết trong một danh mục cụ thể."
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_OPTION="Mặc định"
-COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="Danh sách tất cả thể loại"
-COM_CONTENT_CATEGORY_ADD_TITLE="Quản lý thể loại: Thêm thể loại mới"
-COM_CONTENT_CATEGORY_EDIT_TITLE="Quản lý thể loại: Chỉnh sửa thể loại"
+COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="Danh sách tất cả danh mục"
+COM_CONTENT_CATEGORY_ADD_TITLE="Quản lý danh mục: Thêm danh mục mới"
+COM_CONTENT_CATEGORY_EDIT_TITLE="Quản lý danh mục: Chỉnh sửa danh mục"
 COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Hiển thị giới thiệu bài viết trong một bố trí một hay nhiều cột."
 COM_CONTENT_CATEGORY_VIEW_BLOG_OPTION="Blog"
 COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Category Blog"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Hiển thị một danh sách các bài viết trong một danh mục cụ thể."
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_OPTION="Danh sách"
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh sách thể loại"
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh sách danh mục"
 COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Hiển thị tất cả các bài viết đặc trưng từ một hoặc nhiều loại trong một bố trí một hay nhiều cột."
 COM_CONTENT_CATEGORY_VIEW_FEATURED_OPTION="Mặc định"
-COM_CONTENT_CATEGORY_VIEW_FEATURED_TITLE="Các bài viết Thể loại đơn"
+COM_CONTENT_CATEGORY_VIEW_FEATURED_TITLE="Các bài viết Danh mục đơn"
 COM_CONTENT_FEATURED="Nổi bật"
 COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Hiển thị giới thiệu bài viết trong một bố trí một hay nhiều cột cho các bài viết đặc trưng từ tất cả các loại. "
 COM_CONTENT_FEATURED_VIEW_DEFAULT_OPTION="Mặc định"
