--- a/admin_vi-VN/vi-VN.mod_menu.ini
+++ b/admin_vi-VN/vi-VN.mod_menu.ini
@@ -3,41 +3,57 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_MENU="Menu quản trị"
+MOD_MENU="Quản lý menu"
 MOD_MENU_CLEAR_CACHE="Xóa bộ nhớ đệm"
-MOD_MENU_COMPONENTS="Mở rộng"
+MOD_MENU_COMPONENTS="App Components"
+MOD_MENU_COM_ACTIONLOGS="User Actions Log"
 MOD_MENU_COM_CONTENT="Nội dung"
 MOD_MENU_COM_CONTENT_ARTICLE_MANAGER="Quản lý bài viết"
-MOD_MENU_COM_CONTENT_CATEGORY_MANAGER="Quản lý thể loại"
+MOD_MENU_COM_CONTENT_CATEGORY_MANAGER="Quản lý Danh mục"
 MOD_MENU_COM_CONTENT_FEATURED="Bài viết nổi bật"
 MOD_MENU_COM_CONTENT_NEW_ARTICLE="Viết bài mới"
-MOD_MENU_COM_CONTENT_NEW_CATEGORY="Thêm thể loại mới"
+MOD_MENU_COM_CONTENT_NEW_CATEGORY="Thêm Danh mục"
+MOD_MENU_COM_LANGUAGES_SUBMENU_CONTENT="Ngôn ngữ cho dữ liệu"
+MOD_MENU_COM_LANGUAGES_SUBMENU_INSTALLED="Chọn bản dịch ngôn ngữ"
+MOD_MENU_COM_LANGUAGES_SUBMENU_OVERRIDES="Thay thế bản dịch gốc"
+MOD_MENU_COM_PRIVACY="Privacy"
+MOD_MENU_COM_TEMPLATES_SUBMENU_STYLES="Giao diện"
+MOD_MENU_COM_TEMPLATES_SUBMENU_TEMPLATES="Templates"
 MOD_MENU_COM_USERS="Thành viên"
 MOD_MENU_COM_USERS_ADD_GROUP="Thêm nhóm mới"
-MOD_MENU_COM_USERS_ADD_LEVEL="Thêm cấp độ truy cập"
+MOD_MENU_COM_USERS_ADD_LEVEL="Thêm phân cấp quyền hành"
 MOD_MENU_COM_USERS_ADD_USER="Thêm thành viên mới"
-MOD_MENU_COM_USERS_GROUPS="Nhóm"
-MOD_MENU_COM_USERS_LEVELS="Cấp độ truy cập"
+MOD_MENU_COM_USERS_GROUPS="Nhóm thành viên"
+MOD_MENU_COM_USERS_LEVELS="Phân cấp quyền hành"
 MOD_MENU_COM_USERS_USERS="Thành viên"
 MOD_MENU_COM_USERS_USER_MANAGER="Quản lý thành viên"
-MOD_MENU_COM_USERS_ADD_NOTE="Thêm chú ý thành viên"
-MOD_MENU_COM_USERS_NOTES="Ghi chú thành viên"
-MOD_MENU_COM_USERS_NOTE_CATEGORIES="Ghi chú thể loại"
+MOD_MENU_COM_USERS_ADD_NOTE="Thêm ghi chú về thành viên"
+MOD_MENU_COM_USERS_NOTES="Ghi chú về thành viên"
+MOD_MENU_COM_USERS_NOTE_CATEGORIES="Danh mục (Ghi chú)"
 MOD_MENU_CONFIGURATION="Cấu hình chung"
-MOD_MENU_CONTROL_PANEL="Bảng điều khiển"
-MOD_MENU_EXTENSIONS_EXTENSIONS="Tiện ích mở rộng"
-MOD_MENU_EXTENSIONS_EXTENSION_MANAGER="Quản lý phần mở rộng"
+MOD_MENU_CONTROL_PANEL="Trang chính admin"
+MOD_MENU_EXTENSIONS_EXTENSIONS="Cài đặt và thiết lập"
+MOD_MENU_EXTENSIONS_EXTENSION_MANAGER="Cài đặt và nâng cấp"
 MOD_MENU_EXTENSIONS_LANGUAGE_MANAGER="Quản lý ngôn ngữ"
 MOD_MENU_EXTENSIONS_MODULE_MANAGER="Quản lý Module"
 MOD_MENU_EXTENSIONS_PLUGIN_MANAGER="Quản lý Plug-in"
 MOD_MENU_EXTENSIONS_TEMPLATE_MANAGER="Quản lý giao diện"
-MOD_MENU_FIELD_FORUMURL_DESC="Bạn có thể nhập vào đây URL liên kết tới một diễn đàn khác."
-MOD_MENU_FIELD_FORUMURL_LABEL="Tùy chỉnh diễn đàn hỗ trợ"
-MOD_MENU_FIELD_SHOWHELP="Menu trợ giúp"
-MOD_MENU_FIELD_SHOWHELP_DESC="Hiển thị hoặc ẩn các menu trợ giúp trong đó bao gồm liên kết đến các trang web joomla.org khác nhau hữu ích cho người sử dụng."
-MOD_MENU_FIELD_SHOWNEW="Thêm phím tắt mới"
-MOD_MENU_FIELD_SHOWNEW_DESC="Hiển thị hoặc ẩn 'Thêm mới...' các phím tắt đối với người dùng, nhóm, cấp độ truy cập, các bài viết và chuyên mục."
-MOD_MENU_GLOBAL_CHECKIN="Kiểm tra toàn bộ"
+MOD_MENU_FIELD_CHECK_DESC="Check for the presence of important menu items."
+MOD_MENU_FIELD_CHECK_LABEL="Check Menu"
+MOD_MENU_FIELD_FORUMURL_DESC="Enter the URL to a forum other than the default."
+MOD_MENU_FIELD_FORUMURL_LABEL="Custom Support Forum"
+MOD_MENU_FIELD_MENUTYPE_LABEL="Menu to Show"
+MOD_MENU_FIELD_MENUTYPE_DESC="Choose which menu should be rendered with this instance of module."
+MOD_MENU_FIELD_MENUTYPE_OPTION_PREDEFINED="Use a Preset"
+MOD_MENU_FIELD_PRESET_LABEL="Choose Preset"
+MOD_MENU_FIELD_PRESET_DESC="Choose a preset to use as the backend menu"
+MOD_MENU_FIELD_SHOWHELP="Help Menu"
+MOD_MENU_FIELD_SHOWHELP_DESC="Show or hide the Help menu which includes links to various joomla.org sites useful to users."
+MOD_MENU_FIELD_SHOWNEW="Add New Shortcuts"
+MOD_MENU_FIELD_SHOWNEW_DESC="Show or hide various 'Add New ...' shortcuts against users, groups, access levels, articles and categories."
+MOD_MENU_FIELDS="Fields"
+MOD_MENU_FIELDS_GROUP="Field Groups"
+MOD_MENU_GLOBAL_CHECKIN="Gỡ khóa"
 MOD_MENU_HELP="Trợ giúp"
 MOD_MENU_HELP_COMMUNITY="Trang cộng đồng"
 MOD_MENU_HELP_CURRENT="Trợ giúp với trang này"
@@ -46,28 +62,46 @@ MOD_MENU_HELP_DOCUMENTATION="Tài liệu tham khảo"
 MOD_MENU_HELP_EXTENSIONS="Tiện ích mở rộng"
 MOD_MENU_HELP_JOOMLA="Trợ giúp"
 MOD_MENU_HELP_LINKS="Liên kết hữu ích"
-MOD_MENU_HELP_RESOURCES="Tài nguyên Joomla"
+MOD_MENU_HELP_RESOURCES="Tài nguyên "
 MOD_MENU_HELP_SECURITY="Trung tâm an ninh"
-MOD_MENU_HELP_SHOP="Joomla shop"
+MOD_MENU_HELP_SHOP="shop"
 MOD_MENU_HELP_SUPPORT_OFFICIAL_FORUM="Diễn đàn hỗ trợ chính thức"
 ; the string below will be used if the localised sample data contains an URL for the desired community forum or if the 'Custom Support Forum' field parameter in the Admin Menu module contains an url
 MOD_MENU_HELP_SUPPORT_CUSTOM_FORUM="Tùy chỉnh diễn đàn hỗ trợ"
 ; the string below will be used if MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM_VALUE has a value, i.e the # of the specific language forum in forum.joomla.org 
+MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM_VALUE="511"
+; If you have chosen to display in the string above the section for all languages, translate the string below. 
+; If you have displayed the specific language forum, use something like "Official French Forum" in your language. 
 MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM="Official [language] forum"
-MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM_VALUE=""
 MOD_MENU_HELP_TRANSLATIONS="Các bản dịch cho joomla"
+MOD_MENU_HELP_XCHANGE="Stack Exchange"
 MOD_MENU_HOME_DEFAULT="Trang chủ"
 MOD_MENU_HOME_MULTIPLE="Cảnh báo! Multiple homes!"
+MOD_MENU_IMPORTANT_ITEM_MENU_MANAGER="Menu Manager"
+MOD_MENU_IMPORTANT_ITEM_MODULE_MANAGER="Module Manager"
+MOD_MENU_IMPORTANT_ITEM_COMPONENTS_CONTAINER="Components Container"
+MOD_MENU_IMPORTANT_ITEMS_INACCESSIBLE_LIST_WARNING="The administrator menu <strong>%1$s</strong> does not have - <strong>%2$s</strong>. Select to <strong><a href='%3$s'>turn on the menu recovery mode</a></strong>."
+MOD_MENU_INSTALLER_SUBMENU_DATABASE="Database"
+MOD_MENU_INSTALLER_SUBMENU_DISCOVER="Discover"
+MOD_MENU_INSTALLER_SUBMENU_INSTALL="Cài đặt"
+MOD_MENU_INSTALLER_SUBMENU_LANGUAGES="cài đặt gói dịch thuật"
+MOD_MENU_INSTALLER_SUBMENU_MANAGE="Quản lý toàn bộ gói cài đặt"
+MOD_MENU_INSTALLER_SUBMENU_UPDATE="Cập nhật các gói cài đặt"
+MOD_MENU_INSTALLER_SUBMENU_UPDATESITES="Địa chỉ tìm gói nâng cấp"
+MOD_MENU_INSTALLER_SUBMENU_WARNINGS="Khuyến nghị cho webmaster"
 MOD_MENU_LOGOUT="Đăng xuất"
 MOD_MENU_MASS_MAIL_USERS="Gửi thư cho thành viên"
-MOD_MENU_MEDIA_MANAGER="Quản lý phương tiện"
-MOD_MENU_MENUS="Danh mục"
-MOD_MENU_MENU_MANAGER="Quản lý danh mục"
-MOD_MENU_MENU_MANAGER_NEW_MENU="Thêm danh mục mới"
-MOD_MENU_MENU_MANAGER_NEW_MENU_ITEM="Thêm danh mục mới"
+MOD_MENU_MEDIA_MANAGER="Quản lý ảnh và file"
+MOD_MENU_MENUS="Menu & Cây Menu"
+MOD_MENU_MENUS_ALL_ITEMS="Tất cả nhánh menu"
+MOD_MENU_MENU_MANAGER="Quản lý Cây Menu"
+MOD_MENU_MENU_MANAGER_NEW_MENU="Thêm Cây Menu mới"
+MOD_MENU_MENU_MANAGER_NEW_MENU_ITEM="Thêm nhánh menu mới"
 MOD_MENU_NEW_PRIVATE_MESSAGE="Tin nhắn mới"
 MOD_MENU_PURGE_EXPIRED_CACHE="Purge Expired Cache"
 MOD_MENU_READ_PRIVATE_MESSAGES="Đọc tin nhắn cá nhân"
+MOD_MENU_RECOVERY_EXIT="Exit Recovery Mode"
+MOD_MENU_RECOVERY_MENU_ROOT="Menu Recovery"
 MOD_MENU_SETTINGS="Thiết lập"
 MOD_MENU_MAINTENANCE="Bảo trì"
 MOD_MENU_SYSTEM_INFORMATION="Thông tin hệ thống"
