dieu chinh lang ngay 23 thang 02

--- a/admin_vi-VN/vi-VN.com_installer.ini
+++ b/admin_vi-VN/vi-VN.com_installer.ini
@@ -181,11 +181,11 @@ COM_INSTALLER_UNINSTALL_ERROR="Lỗi gỡ bỏ cài đặt %s."
 COM_INSTALLER_UNINSTALL_LANGUAGE="Một ngôn ngữ nên luôn luôn được cài đặt như một gói. <br />Để gỡ bỏ một ngôn ngữ, lọc theo kiểu gói và gõ bỏ gói ngôn ngữ đó."
 COM_INSTALLER_UNINSTALL_SUCCESS="Gỡ cài đặt %s đã thành công."
 COM_INSTALLER_UPLOAD_AND_INSTALL="Tải lên và cài đặt"
-COM_INSTALLER_UPLOAD_PACKAGE_FILE="Tải lên gói cài đặt"
+COM_INSTALLER_UPLOAD_PACKAGE_FILE="Tải lên file cài đặt"
 COM_INSTALLER_VALUE_CLIENT_SELECT="- Chọn vị trí -"
 COM_INSTALLER_VALUE_FOLDER_NONAPPLICABLE="N/A"
 COM_INSTALLER_VALUE_FOLDER_SELECT="- Chọn thư mục -"
-COM_INSTALLER_UPLOAD_INSTALL_JOOMLA_EXTENSION="Upload & Install Joomla Extension"
+COM_INSTALLER_UPLOAD_INSTALL_JOOMLA_EXTENSION="Upload và cài đặt"
 COM_INSTALLER_VALUE_STATE_SELECT="- Select Status -"
 COM_INSTALLER_VALUE_TYPE_SELECT="- Select Type -"
 COM_INSTALLER_XML_DESCRIPTION="Thành phần cài đặt thêm, loại bỏ và nâng cấp mở rộng"
