--- a/admin_vi-VN/vi-VN.ini
+++ b/admin_vi-VN/vi-VN.ini
@@ -273,7 +273,7 @@ JGLOBAL_AUTHOR_ALPHABETICAL="Tác giả sắp xếp theo thứ tự chữ cái"
 JGLOBAL_AUTHOR_REVERSE_ALPHABETICAL="Tác giả sắp xếp theo Đảo ngược thứ tự chữ cái"
 JGLOBAL_AUTO="Tự động"
 JGLOBAL_BATCH_MOVE_PARENT_NOT_FOUND="Không thể tìm thấy mục điểm đến cho động thái này."
-JGLOBAL_BATCH_PROCESS="Quy trình"
+JGLOBAL_BATCH_PROCESS="Xử lý"
 JGLOBAL_BLOG="Blog"
 JGLOBAL_BLOG_LAYOUT_OPTIONS="Tùy chọn giao diện dạng Blog"
 JGLOBAL_CATEGORIES_OPTIONS="Tùy chọn danh mục"
@@ -798,7 +798,7 @@ JOPTION_USE_DEFAULT="- Use Default -"
 JOPTION_USE_MENU_REQUEST_SETTING="- Sử dụng thiết lập Menu hoặc Request -"
 
 JSEARCH_FILTER_LABEL="Lọc:"
-JSEARCH_FILTER_CLEAR="Xóa"
+JSEARCH_FILTER_CLEAR="Reset"
 JSEARCH_FILTER_SUBMIT="Tìm kiếm"
 JSEARCH_FILTER="Tìm kiếm"
 JSEARCH_TITLE="Tìm kiếm %s"
@@ -934,5 +934,5 @@ SQLITE="SQLite"
 SQLSRV="Microsoft SQL Server"
 
 ; Search tools
-JSEARCH_TOOLS="Search tools"
-JSEARCH_TOOLS_DESC="Filter the list items"
+JSEARCH_TOOLS="Tìm nâng cao"
+JSEARCH_TOOLS_DESC="Tìm nâng cao với nhiều thông số"
