--- a/admin_vi-VN/vi-VN.com_content.ini
+++ b/admin_vi-VN/vi-VN.com_content.ini
@@ -13,8 +13,8 @@ COM_CONTENT_ARTICLE_CONTENT="Content"
 COM_CONTENT_ARTICLES_TITLE="Quản lý bài viết: Bài viết"
 COM_CONTENT_ATTRIBS_ARTICLE_SETTINGS_LABEL="Tùy chọn"
 COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Tùy chọn bài viết"
-COM_CONTENT_BATCH_MENU_LABEL="Chọn mục di chuyển / Sao chép"
-COM_CONTENT_BATCH_OPTIONS="Hàng loạt xử lý các bài viết được lựa chọn"
+COM_CONTENT_BATCH_MENU_LABEL="Xử lý về Danh mục"
+COM_CONTENT_BATCH_OPTIONS="Chỉnh lại cho tất cả các bài viết đã chọn"
 COM_CONTENT_BATCH_TIP="Nếu lựa chọn để sao chép bài viết, bất cứ hành động nào khác được lựa chọn sẽ được áp dụng cho các bài viết sao chép. Nếu không, tất cả các hành động được áp dụng cho các bài viết được lựa chọn."
 COM_CONTENT_CHANGE_ARTICLE="Chọn hoặc sửa bài viết"
 COM_CONTENT_CHANGE_ARTICLE_BUTTON="Lựa chọn / Thay đổi"
