--- a/admin_vi-VN/vi-VN.ini
+++ b/admin_vi-VN/vi-VN.ini
@@ -819,7 +819,7 @@ JTOOLBAR_DUPLICATE="Bản sao"
 JTOOLBAR_EDIT="Sửa"
 JTOOLBAR_EDIT_CSS="Sửa CSS"
 JTOOLBAR_EDIT_HTML="Sửa HTML"
-JTOOLBAR_EMPTY_TRASH="Dọn sạch thùng rác"
+JTOOLBAR_EMPTY_TRASH="Xóa hoàn toàn"
 JTOOLBAR_ENABLE="Kích hoạt tính năng"
 JTOOLBAR_EXPORT="Xuất ra"
 JTOOLBAR_HELP="Trợ giúp"
