--- a/admin_vi-VN/vi-VN.com_content.sys.ini
+++ b/admin_vi-VN/vi-VN.com_content.sys.ini
@@ -8,9 +8,9 @@ COM_CONTENT_ARCHIVE_VIEW_DEFAULT_DESC="Hiển thị tất cả các bài viết 
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_OPTION="mặc định"
 COM_CONTENT_ARCHIVE_VIEW_DEFAULT_TITLE="Các bài viết lưu trữ"
 COM_CONTENT_ARTICLE_MANAGER="Quản lý bài viết"
-COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC="Hiển thị bài viết duy nhất."
+COM_CONTENT_ARTICLE_VIEW_DEFAULT_DESC="Tạo menu nối thẳng đến một bài viết cụ thể."
 COM_CONTENT_ARTICLE_VIEW_DEFAULT_OPTION="Mặc định"
-COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE="Single Article"
+COM_CONTENT_ARTICLE_VIEW_DEFAULT_TITLE="Bài viết"
 COM_CONTENT_ARTICLES="Bài viết"
 COM_CONTENT_CATEGORIES="Danh mục"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_DESC="Hiển thị một danh sách của tất cả các loại bài viết trong một danh mục cụ thể."
@@ -18,20 +18,20 @@ COM_CONTENT_CATEGORIES_VIEW_DEFAULT_OPTION="Mặc định"
 COM_CONTENT_CATEGORIES_VIEW_DEFAULT_TITLE="Danh sách tất cả danh mục"
 COM_CONTENT_CATEGORY_ADD_TITLE="Quản lý danh mục: Thêm danh mục mới"
 COM_CONTENT_CATEGORY_EDIT_TITLE="Quản lý danh mục: Chỉnh sửa danh mục"
-COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Hiển thị giới thiệu bài viết trong một bố trí một hay nhiều cột."
+COM_CONTENT_CATEGORY_VIEW_BLOG_DESC="Menu nối đến danh mục được chọn, và các bài viết hiển thị kiểu tin: với tiêu đề, hình ảnh, và đoạn mô tả ngắn."
 COM_CONTENT_CATEGORY_VIEW_BLOG_OPTION="Blog"
-COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Category Blog"
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Hiển thị một danh sách các bài viết trong một danh mục cụ thể."
+COM_CONTENT_CATEGORY_VIEW_BLOG_TITLE="Danh mục - kiểu tin (blog)"
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_DESC="Menu nối đến danh mục được chọn, và các bài viết hiển thị kiểu bảng (table): chỉ hiển thị tiêu đề của các bài viết nằm trong bảng (table)"
 COM_CONTENT_CATEGORY_VIEW_DEFAULT_OPTION="Danh sách"
-COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh sách danh mục"
-COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Hiển thị tất cả các bài viết đặc trưng từ một hoặc nhiều loại trong một bố trí một hay nhiều cột."
+COM_CONTENT_CATEGORY_VIEW_DEFAULT_TITLE="Danh mục - kiểu bảng (table)"
+COM_CONTENT_CATEGORY_VIEW_FEATURED_DESC="Menu nối đến chức năng hiển thị tất cả bài viết được đánh dấu sao (feature)"
 COM_CONTENT_CATEGORY_VIEW_FEATURED_OPTION="Mặc định"
 COM_CONTENT_CATEGORY_VIEW_FEATURED_TITLE="Các bài viết Danh mục đơn"
 COM_CONTENT_FEATURED="Nổi bật"
 COM_CONTENT_FEATURED_VIEW_DEFAULT_DESC="Hiển thị giới thiệu bài viết trong một bố trí một hay nhiều cột cho các bài viết đặc trưng từ tất cả các loại. "
 COM_CONTENT_FEATURED_VIEW_DEFAULT_OPTION="Mặc định"
-COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Bài viết nổi bật"
-COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Viết bài mới"
+COM_CONTENT_FEATURED_VIEW_DEFAULT_TITLE="Bài viết nổi bật (feature)"
+COM_CONTENT_FORM_VIEW_DEFAULT_DESC="Tạo menu đến chức năng tạo form đăng bài cho thành viên gửi bài viết"
 COM_CONTENT_FORM_VIEW_DEFAULT_OPTION="Viết"
-COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Viết bài mới"
+COM_CONTENT_FORM_VIEW_DEFAULT_TITLE="Form đăng bài"
 COM_CONTENT_XML_DESCRIPTION="Article management component"
