--- a/admin_vi-VN/vi-VN.com_modules.ini
+++ b/admin_vi-VN/vi-VN.com_modules.ini
@@ -102,10 +102,10 @@ COM_MODULES_N_MODULES_DUPLICATED="%d modules successfully duplicated"
 COM_MODULES_N_MODULES_DUPLICATED_1="%d module successfully duplicated"
 COM_MODULES_NO_ITEM_SELECTED="Không có module được chọn"
 COM_MODULES_NODESCRIPTION="Không có mô tả"
-COM_MODULES_OPTION_MENU_ALL="Trên tất cả các trang"
-COM_MODULES_OPTION_MENU_EXCLUDE="Tùy chọn khác nhau"
-COM_MODULES_OPTION_MENU_INCLUDE="Chỉ trên các trang được lựa chọn"
-COM_MODULES_OPTION_MENU_NONE="Không có"
+COM_MODULES_OPTION_MENU_ALL="Vào tất cả các nhánh menu"
+COM_MODULES_OPTION_MENU_EXCLUDE="Vào tất cả, chọn ngoại trừ"
+COM_MODULES_OPTION_MENU_INCLUDE="Chỉ trên nhánh menu được chọn"
+COM_MODULES_OPTION_MENU_NONE="None - không nhánh menu"
 COM_MODULES_OPTION_ORDER_POSITION="%d. %s"
 COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED="Giao diện"
 COM_MODULES_OPTION_POSITION_USER_DEFINED="Sử dụng"
