--- a/site_vi-VN/vi-VN.com_content.ini
+++ b/site_vi-VN/vi-VN.com_content.ini
@@ -33,7 +33,7 @@ COM_CONTENT_MODIFIED_DATE="Ngày chỉnh sửa"
 COM_CONTENT_MONTH="Tháng"
 COM_CONTENT_MORE_ARTICLES="Các bài khác..."
 COM_CONTENT_NEW_ARTICLE="Các bài mới"
-COM_CONTENT_NO_ARTICLES="Không có bài nào trong mục này. Nếu có các mục con được hiển thị, chúng sẽ có bài viết trong đó."
+COM_CONTENT_NO_ARTICLES="Không có bài nào trong mục này."
 COM_CONTENT_NONE="None"
 COM_CONTENT_NUM_ITEMS="Số bài viết:"
 COM_CONTENT_ON_NEW_CONTENT="Một bài viết mới được gửi bởi '%1$s' - '%2$s'."
