--- a/site_vi-VN/vi-VN.com_tags.ini
+++ b/site_vi-VN/vi-VN.com_tags.ini
@@ -7,6 +7,6 @@ COM_TAGS_CREATED_DATE="Ngày tạo"
 COM_TAGS_FILTER_SEARCH_DESC="Nhập tất cả hoặc một phần của tiêu đề để tìm kiếm."
 COM_TAGS_MODIFIED_DATE="Ngày thay đổi"
 COM_TAGS_NO_ITEMS="Không có mục nào phù hợp được tìm thấy."
-COM_TAGS_NO_TAGS="Không có thẻ"
+COM_TAGS_NO_TAGS="Không có thẻ tag"
 COM_TAGS_PUBLISHED_DATE="Ngày xuất bản"
-COM_TAGS_TITLE_FILTER_LABEL="Nhập một phần của tiêu đề"
+COM_TAGS_TITLE_FILTER_LABEL="Tìm nhanh"
