--- a/admin_vi-VN/vi-VN.com_tags.sys.ini
+++ b/admin_vi-VN/vi-VN.com_tags.sys.ini
@@ -20,17 +20,17 @@ COM_TAGS_CONTENT_TYPE_USER_NOTES_CATEGORY="User Notes Category"
 COM_TAGS_CONTENT_TYPE_WEBLINK="Weblink"
 COM_TAGS_CONTENT_TYPE_WEBLINKS_CATEGORY="Weblinks Category"
 COM_TAGS_TAG="Tag"
-COM_TAGS_TAG_VIEW_DEFAULT_DESC="This links to a list of items with specific tags."
+COM_TAGS_TAG_VIEW_DEFAULT_DESC="Chọn tag cụ thể, trang hiển thị bao gồm tag và tất cả các bài được gắn tag, kiểu mặc định."
 COM_TAGS_TAG_VIEW_DEFAULT_OPTION="Default"
-COM_TAGS_TAG_VIEW_DEFAULT_TITLE="Tagged Items"
+COM_TAGS_TAG_VIEW_DEFAULT_TITLE="Tag được chọn - kiểu mặc định"
 COM_TAGS_TAG_VIEW_LIST_COMPACT_OPTION="Compact layout"
-COM_TAGS_TAG_VIEW_LIST_COMPACT_TITLE="Compact list of tagged items"
-COM_TAGS_TAG_VIEW_LIST_DESC="List of items that have been tagged with the selected tags"
+COM_TAGS_TAG_VIEW_LIST_COMPACT_TITLE="Tag được chọn - kiểu bảng Compact"
+COM_TAGS_TAG_VIEW_LIST_DESC="Chọn tag cụ thể, trang hiển thị bao gồm tag và tất cả các bài được gắn tag, kiểu bảng Compact"
 COM_TAGS_TAG_VIEW_LIST_OPTION="List view options"
 COM_TAGS_TAG_VIEW_LIST_TITLE="Tagged items list"
 COM_TAGS_TAGS="Tags"
 COM_TAGS_TAGS_VIEW_COMPACT_DESC="Compact list of tags"
 COM_TAGS_TAGS_VIEW_COMPACT_TITLE="Compact Tags View"
-COM_TAGS_TAGS_VIEW_DEFAULT_DESC="This links to a detailed list of all tags"
-COM_TAGS_TAGS_VIEW_DEFAULT_TITLE="List of all tags"
+COM_TAGS_TAGS_VIEW_DEFAULT_DESC="Trang này hiển thị tất cả các tag trên website"
+COM_TAGS_TAGS_VIEW_DEFAULT_TITLE="Tất cả các tag"
 COM_TAGS_XML_DESCRIPTION="A component for tagging content items"
