--- a/site_vi-VN/vi-VN.com_tags.ini
+++ b/site_vi-VN/vi-VN.com_tags.ini
@@ -10,3 +10,5 @@ COM_TAGS_NO_ITEMS="Không có mục nào phù hợp được tìm thấy."
 COM_TAGS_NO_TAGS="Không có thẻ tag"
 COM_TAGS_PUBLISHED_DATE="Ngày xuất bản"
 COM_TAGS_TITLE_FILTER_LABEL="Tìm nhanh"
+COM_TAGS_ALL_TAGS="Tất cả các Tag:"
+COM_TAGS_TAG_ITEM="Tag:"
