cap nhat them ban dich

--- a/admin_vi-VN/vi-VN.ini
+++ b/admin_vi-VN/vi-VN.ini
@@ -165,9 +165,9 @@ JERROR_SAVE_FAILED="Không thể lưu dữ liệu. Lỗi: %s"
 
 JFIELD_ACCESS_DESC="Mức truy cập nhóm được cho phép để xem mục này."
 JFIELD_ACCESS_LABEL="Truy cập"
-JFIELD_ALIAS_DESC="Alias là thành phần tạo ra địa chỉ url đẹp."
-JFIELD_ALIAS_LABEL="Alias (slug)"
-JFIELD_ALIAS_PLACEHOLDER="Auto-generate from title"
+JFIELD_ALIAS_DESC="Alias là thành phần trên địa chỉ url của bạn. Không cần nhập gì vào đây, hệ thống sẽ tự động tạo alias cho bạn. Nếu muốn điều chỉnh theo ý riêng, hãy nhập thông tin vào field này."
+JFIELD_ALIAS_LABEL="Alias - tạo url slug"
+JFIELD_ALIAS_PLACEHOLDER="Tự động tạo từ tiêu đề"
 JFIELD_ALT_COMPONENT_LAYOUT_DESC="Sử dụng một bố cục khác nhau từ các xem thành phần cung cấp hoặc ghi đè trong các mẫu."
 JFIELD_ALT_LAYOUT_LABEL="Giao diện thay thế"
 JFIELD_ALT_MODULE_LAYOUT_DESC="Sử dụng một bố cục khác nhau từ các mô-đun cung cấp hoặc ghi đè trong các mẫu."
