--- a/site_vi-VN/vi-VN.ini
+++ b/site_vi-VN/vi-VN.ini
@@ -126,8 +126,8 @@ JERROR_USERS_PROFILE_NOT_FOUND="Hồ sơ thành viên không được tìm thấ
 
 JFIELD_ACCESS_DESC="Cấp độ truy cập cho nội dung này"
 JFIELD_ACCESS_LABEL="Truy cập"
-JFIELD_ALIAS_DESC="Một tên khác sẽ được sử dụng trong chức năng tạo liên kết thân thiện (SEF URL). Hãy để trống và Joomla! sẽ tự động nhập thông tin mặc định từ tựa đề vào đây. Thông tin này phụ thuộc vào việc thiết lập SEO (Global Configuration->Site). <br />Sử dụng mã Unicode sẽ tạo ra tên khác mã UTF8. Bạn cũng có thể tự nhập bất cứ các ký tự mã utf8. Khoảng cách và các ký tự không hợp lệ sẽ được đổi thành dấu gạch ngang.<br />Khi sử dụng phiên dịch mặc định nó sẽ tạo ra một tên khác bằng chữ thường với các dấu gạch ngang thay vì khoảng cách. Bạn có thể tự nhập tên này. Sử dụng chữ thường và dấu gạch ngang (-). Không được phép có khảng cách và dấu gạch dưới. Giá trị mặc định sẽ là ngày và thời gian nếu tiêu đề không phải là các chữ cái Latin."
-JFIELD_ALIAS_LABEL="Tên khác"
+JFIELD_ALIAS_DESC="Alias là thành phần trên địa chỉ url của bạn. Không cần nhập gì vào đây, hệ thống sẽ tự động tạo alias cho bạn. Nếu muốn điều chỉnh theo ý riêng, hãy nhập thông tin vào field này."
+JFIELD_ALIAS_LABEL="Alias - tạo url slug (tự động tạo nếu bỏ trống)"
 JFIELD_ALIAS_PLACEHOLDER="Auto-generate from title"
 JFIELD_ALT_PAGE_TITLE_LABEL="Alternative Page Title"
 JFIELD_CATEGORY_DESC="Chọn Chuyên mục chứa bài viết này"
