--- a/site_vi-VN/vi-VN.mod_footer.sys.ini
+++ b/site_vi-VN/vi-VN.mod_footer.sys.ini
@@ -4,7 +4,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Note : %date% will be auto replaced by current year !Don't translate
 
-MOD_FOOTER="Footer"
-MOD_FOOTER_XML_DESCRIPTION="Module này hiển thị thông tin về bản quyền Joomla!."
+MOD_FOOTER="Chân trang"
+MOD_FOOTER_XML_DESCRIPTION="Module này tạo thông tin về bản quyền website."
 MOD_FOOTER_LAYOUT_DEFAULT="Mặc định"
 
