--- a/admin_vi-VN/vi-VN.com_menus.ini
+++ b/admin_vi-VN/vi-VN.com_menus.ini
@@ -232,17 +232,17 @@ COM_MENUS_TITLE_EDIT_ITEM="Menu Manager: Title Edit Item"
 COM_MENUS_TITLE_TRANSLATION="Title (%s)"
 COM_MENUS_TOOLBAR_SET_HOME="Home"
 COM_MENUS_TYPE_ALIAS="Menu Item Alias"
-COM_MENUS_TYPE_ALIAS_DESC="Create an alias to another menu item."
+COM_MENUS_TYPE_ALIAS_DESC="Tạo ra một menu liên kết đến một nhánh menu bạn đã tạo trước đó."
 COM_MENUS_TYPE_CHOOSE="Select a Menu Item Type:"
 COM_MENUS_TYPE_CONTAINER="Components Menu Container"
 COM_MENUS_TYPE_CONTAINER_DESC="This will create a container menu which will show the items in the protected menu type 'main'. You can also selectively hide or show menu items."
 COM_MENUS_TYPE_EXTERNAL_URL="URL"
-COM_MENUS_TYPE_EXTERNAL_URL_DESC="An external or internal URL."
+COM_MENUS_TYPE_EXTERNAL_URL_DESC="Tạo menu trỏ đến một địa chỉ URL."
 COM_MENUS_TYPE_HEADING="Menu Heading"
 COM_MENUS_TYPE_HEADING_DESC="A heading for the parent of submenu items."
 COM_MENUS_TYPE_SEPARATOR="Separator"
 COM_MENUS_TYPE_SEPARATOR_DESC="A separator with or without a text label, useful to separate items within a menu."
-COM_MENUS_TYPE_SYSTEM="System Links"
+COM_MENUS_TYPE_SYSTEM="Tạo menu cho link bên ngoài hoặc menu giả"
 COM_MENUS_TYPE_UNEXISTING="Component '%s' does not exist."
 COM_MENUS_TYPE_UNKNOWN="Unknown"
 COM_MENUS_VIEW_EDIT_ITEM_TITLE="Menus: Edit Item"
