--- a/site_vi-VN/vi-VN.com_content.ini
+++ b/site_vi-VN/vi-VN.com_content.ini
@@ -11,7 +11,7 @@ COM_CONTENT_ARTICLE_INFO="Chi tiết"
 COM_CONTENT_ARTICLE_VOTE_SUCCESS="Cảm ơn bạn đã đánh giá bài này."
 COM_CONTENT_ARTICLE_VOTE_FAILURE="Bạn đã đánh giá bài này rồi!"
 COM_CONTENT_AUTHOR_FILTER_LABEL="Theo Tác giả"
-COM_CONTENT_CATEGORY="Chuyên mục: %s"
+COM_CONTENT_CATEGORY="Danh mục: %s"
 COM_CONTENT_CHECKED_OUT_BY="Kiểm tra bởi %s"
 COM_CONTENT_CREATE_ARTICLE="Gửi bài mới"
 COM_CONTENT_CREATED_DATE="Ngày tạo"
@@ -28,7 +28,7 @@ COM_CONTENT_HITS_FILTER_LABEL="Theo Lượt xem"
 COM_CONTENT_INTROTEXT="Bài viết phải có nội dung"
 COM_CONTENT_INVALID_RATING="Đánh giá bài viết không hợp lệ: %s"
 COM_CONTENT_LAST_UPDATED="Cập nhật lần cuối: %s"
-COM_CONTENT_METADATA="Siêu dữ liệu (Metadata)"
+COM_CONTENT_METADATA="Tối ưu SEO"
 COM_CONTENT_MODIFIED_DATE="Ngày chỉnh sửa"
 COM_CONTENT_MONTH="Tháng"
 COM_CONTENT_MORE_ARTICLES="Các bài khác..."
