--- a/admin_vi-VN/vi-VN.plg_content_vote.ini
+++ b/admin_vi-VN/vi-VN.plg_content_vote.ini
@@ -4,10 +4,10 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_CONTENT_VOTE="Content - Vote"
-PLG_VOTE_LABEL="Xin hãy xếp hạng"
-PLG_VOTE_RATE="Xếp hạng"
+PLG_VOTE_LABEL="Đánh giá"
+PLG_VOTE_RATE="Đánh giá"
 PLG_VOTE_STAR_ACTIVE="Ngôi sao có hiệu lực"
 PLG_VOTE_STAR_INACTIVE="Ngôi sao không hiệu lực"
-PLG_VOTE_USER_RATING="Bạn đánh giá:&#160;%1$s&#160;/&#160;%2$s"
-PLG_VOTE_VOTE="Chọn mức %s"
+PLG_VOTE_USER_RATING="Điểm đánh giá:&#160;%1$s&#160;/&#160;%2$s"
+PLG_VOTE_VOTE="%s sao"
 PLG_VOTE_XML_DESCRIPTION="Thêm một đánh giá vào bài viết"
