--- a/site_vi-VN/vi-VN.mod_articles_archive.sys.ini
+++ b/site_vi-VN/vi-VN.mod_articles_archive.sys.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-MOD_ARTICLES_ARCHIVE="Danh sách các bài viết"
-MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="Module này cho thấy một danh sách các tháng có chứa các bài viết. Sau khi bạn đã thay đổi tình trạng của 1 bài viết trong danh sách, danh sách này sẽ được tự động tạo ra."
+MOD_ARTICLES_ARCHIVE="Danh sách tháng năm - bài lưu trữ"
+MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="Module hiển thị danh sách các tháng cụ thể, liên kết tới các bài trong tháng đó. Lưu ý các bài được đánh dấu là lưu trữ mới xuất hiện trong danh sách liên kết."
 MOD_ARTICLES_ARCHIVE_LAYOUT_DEFAULT="Mặc định"
 
