--- a/admin_vi-VN/vi-VN.ini
+++ b/admin_vi-VN/vi-VN.ini
@@ -839,7 +839,7 @@ JTOOLBAR_VERSIONS="Versions"
 JTOOLBAR_UNINSTALL="Gỡ bỏ cài đặt"
 JTOOLBAR_UNPUBLISH="không xuất bản"
 JTOOLBAR_UPLOAD="Tải lên"
-JTOOLBAR_TRASH="Thùng rác"
+JTOOLBAR_TRASH="Xóa"
 JTOOLBAR_UNTRASH="Rời thùng rác"
 JTOOLBAR_REBUILD_SUCCESS="Xây dựng thành công"
 
