--- a/site_vi-VN/vi-VN.mod_tags_popular.sys.ini
+++ b/site_vi-VN/vi-VN.mod_tags_popular.sys.ini
@@ -3,8 +3,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-MOD_TAGS_POPULAR="Các thẻ phổ biến"
-MOD_TAGS_POPULAR_LAYOUT_CLOUD="Cloud"
+MOD_TAGS_POPULAR="Các TAG phổ biến"
+MOD_TAGS_POPULAR_LAYOUT_CLOUD="Cloud - Mây"
 MOD_TAGS_POPULAR_LAYOUT_DEFAULT="Mặc định"
-MOD_TAGS_POPULAR_XML_DESCRIPTION="Module Các thẻ phổ biến hiển thị các thẻ thông dụng nhất, tùy chọn trong khoảng thời gian cụ thể."
+MOD_TAGS_POPULAR_XML_DESCRIPTION="Module Các tag phổ biến hiển thị các tag mà sử dụng nhiều nhất trên website."
 
