--- a/site_vi-VN/vi-VN.mod_custom.ini
+++ b/site_vi-VN/vi-VN.mod_custom.ini
@@ -3,9 +3,9 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_CUSTOM="Custom HTML"
-MOD_CUSTOM_FIELD_PREPARE_CONTENT_DESC="Tùy chọn chuẩn bị nội dung với plugin nội dung Joomla."
-MOD_CUSTOM_FIELD_PREPARE_CONTENT_LABEL="Chuẩn bị nội dung"
-MOD_CUSTOM_XML_DESCRIPTION="Module này cho phép bạn tạo ra 1 module tùy biến với bộ soạn thảo WYSIWYG."
-MOD_CUSTOM_FIELD_BACKGROUNDIMAGE_LABEL="Chọn 1 ảnh nền"
-MOD_BACKGROUNDIMAGE_FIELD_LOGO_DESC="Nếu bạn chọn một hình ảnh ở đây nó sẽ tự động được chèn vào như là một phong cách nội tuyến cho các phần tử"
+MOD_CUSTOM="Custom HTML - Văn bản tự do"
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_DESC="Tận dụng chức năng xử lý nội dung của Joomla Content Plugins."
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_LABEL="Prepare Content"
+MOD_CUSTOM_XML_DESCRIPTION="Bạn có thể chèn hình ảnh làm banner, hoặc thêm các văn bản soạn thảo tự do như Word."
+MOD_CUSTOM_FIELD_BACKGROUNDIMAGE_LABEL="Thêm ảnh nền"
+MOD_BACKGROUNDIMAGE_FIELD_LOGO_DESC="Ảnh này sẽ trở thành ảnh nền cho module"
