mod custom html va art latest

--- a/site_vi-VN/vi-VN.mod_articles_latest.sys.ini
+++ b/site_vi-VN/vi-VN.mod_articles_latest.sys.ini
@@ -4,6 +4,6 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_ARTICLES_LATEST="Bài viết mới nhất"
-MOD_LATEST_NEWS_XML_DESCRIPTION="Module này cho thấy một danh sách các bài viết gần đây nhất được công bố và hiện tại. Một số được hiển thị có thể đã hết hạn mặc dù họ là những người gần đây nhất."
+MOD_LATEST_NEWS_XML_DESCRIPTION="Module hiển thị danh sách các bài viết mới nhất. Ô Danh mục để trống sẽ hiện thị tất cả bài mới nhất trên tất cả các danh mục; hoặc chọn giới hạn các bài viết mới nhất trong các danh mục bạn chọn."
 MOD_ARTICLES_LATEST_LAYOUT_DEFAULT="Mặc định"
 
