--- a/site_vi-VN/vi-VN.mod_articles_latest.ini
+++ b/site_vi-VN/vi-VN.mod_articles_latest.ini
@@ -4,22 +4,24 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_ARTICLES_LATEST="Bài viết mới nhất"
-MOD_LATEST_NEWS_FIELD_CATEGORY_DESC="Chọn bài viết từ một hoặc nhiều danh mục. Nếu không chọn sẽ hiện thị mặc định tất cả các danh mục"
+MOD_LATEST_NEWS_FIELD_CATEGORY_DESC=" Ô Danh mục để trống sẽ hiện thị tất cả bài mới nhất trên tất cả các danh mục; hoặc chọn giới hạn các bài viết mới nhất trong các danh mục bạn chọn"
 MOD_LATEST_NEWS_FIELD_COUNT_DESC="Số bài viết được hiển thị (mặc định là 5)"
-MOD_LATEST_NEWS_FIELD_COUNT_LABEL="Đếm"
+MOD_LATEST_NEWS_FIELD_COUNT_LABEL="Số bài viết muốn hiển thị"
 MOD_LATEST_NEWS_FIELD_FEATURED_DESC="Hiện/ẩn các bài viết nổi bật"
 MOD_LATEST_NEWS_FIELD_FEATURED_LABEL="Bài viết nổi bật"
-MOD_LATEST_NEWS_FIELD_ORDERING_DESC="Recently Added First: order the articles using their creation date<br />Recently Modified First: order the articles using their modification date<br />Recently Published First: order the articles using their publication date.<br />Recently Touched First: order the articles using their modification or creation dates."
-MOD_LATEST_NEWS_FIELD_ORDERING_LABEL="Sắp xếp"
-MOD_LATEST_NEWS_FIELD_USER_DESC="Lọc theo tác giả"
-MOD_LATEST_NEWS_FIELD_USER_LABEL="Tác giả"
-MOD_LATEST_NEWS_VALUE_ADDED_BY_ME="Thêm hoặc sửa bởi tôi"
-MOD_LATEST_NEWS_VALUE_ANYONE="Ai đó"
-MOD_LATEST_NEWS_VALUE_NOTADDED_BY_ME="Không thêm hoặc sửa bởi tôi"
+MOD_LATEST_NEWS_FIELD_ORDERING_DESC="Lưu ý: kiểu Touched, trong mỗi bài viết sẽ ưu tiên lấy thông số ngày bài viết được chỉnh sửa mới nhất, nếu không có sẽ lấy thông số ngày đăng. Sau đó sắp xếp danh sách này theo thứ tự ngày mới nhất trước."
+MOD_LATEST_NEWS_FIELD_ORDERING_LABEL="Sắp xếp thứ tự"
+MOD_LATEST_NEWS_FIELD_USER_DESC="Lọc theo tài khoản đăng bài"
+MOD_LATEST_NEWS_FIELD_USER_LABEL="Tài khoản đăng bài"
+MOD_LATEST_NEWS_VALUE_ADDED_BY_ME="Chỉ hiển thị bài viết của tài khoản đang đăng nhập"
+MOD_LATEST_NEWS_VALUE_ANYONE="Tất cả"
+MOD_LATEST_NEWS_VALUE_NOTADDED_BY_ME="Bài viết từ tất cả tài khoản khác, trừ tài khoản đang đăng nhập"
 MOD_LATEST_NEWS_VALUE_ONLY_SHOW_FEATURED="Chỉ hiển thị các bài viết nổi bật"
-MOD_LATEST_NEWS_VALUE_RECENT_ADDED="Các bài viết mới thêm"
-MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Các bài viết mới sửa"
-MOD_LATEST_NEWS_VALUE_RECENT_RAND="Random Articles"
-MOD_LATEST_NEWS_VALUE_RECENT_PUBLISHED="Các bài viết mới xuất bản"
-MOD_LATEST_NEWS_VALUE_RECENT_TOUCHED="Các bài viết mới cảm động"
-MOD_LATEST_NEWS_XML_DESCRIPTION="Module này cho thấy một danh sách các bài viết gần đây nhất được công bố và hiện tại. Một số được hiển thị có thể đã hết hạn mặc dù họ là những người gần đây nhất."
+MOD_LATEST_NEWS_VALUE_RECENT_ADDED="Bài viết mới đăng xếp trước"
+MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Bài viết mới sửa xếp trước"
+MOD_LATEST_NEWS_VALUE_RECENT_RAND="Thứ tự ngẫu nhiên"
+MOD_LATEST_NEWS_VALUE_RECENT_PUBLISHED="Bài viết mới xuất bản xếp trước"
+MOD_LATEST_NEWS_VALUE_RECENT_TOUCHED="Sắp xếp theo kiểu Touched"
+MOD_LATEST_NEWS_XML_DESCRIPTION="Module hiển thị danh sách các bài viết mới nhất. Ô Danh mục để trống sẽ hiện thị tất cả bài mới nhất trên tất cả các danh mục; hoặc chọn giới hạn các bài viết mới nhất trong các danh mục bạn chọn."
+MOD_LATEST_NEWS_VALUE_CREATED_BY="Chọn danh sách tài khoản đăng bài cụ thể"
+MOD_LATEST_NEWS_FIELD_AUTHOR_LABEL="Chọn tài khoản cụ thể"
