--- a/site_vi-VN/vi-VN.mod_custom.sys.ini
+++ b/site_vi-VN/vi-VN.mod_custom.sys.ini
@@ -3,7 +3,6 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_CUSTOM="Custom HTML"
-MOD_CUSTOM_XML_DESCRIPTION="Module này cho phép bạn tạo ra 1 module tùy biến với bộ soạn thảo WYSIWYG."
+MOD_CUSTOM="Custom HTML - Văn bản tự do"
+MOD_CUSTOM_XML_DESCRIPTION="Bạn có thể chèn hình ảnh làm banner, hoặc thêm các văn bản soạn thảo tự do như Word."
 MOD_CUSTOM_LAYOUT_DEFAULT="Mặc định"
-
