--- a/site_vi-VN/vi-VN.mod_tags_popular.ini
+++ b/site_vi-VN/vi-VN.mod_tags_popular.ini
@@ -3,7 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-MOD_TAGS_POPULAR="Thẻ phổ biến"
+MOD_TAGS_POPULAR="Tag phổ biến"
 MOD_TAGS_POPULAR_FIELD_ALL_TIME="Tất cả thời gian"
 MOD_TAGS_POPULAR_FIELD_DISPLAY_COUNT_DESC="Choose if the number of tagged items should be displayed next to each tag."
 MOD_TAGS_POPULAR_FIELD_DISPLAY_COUNT_LABEL="Display number of items"
@@ -20,15 +20,16 @@ MOD_TAGS_POPULAR_FIELD_MINSIZE_DESC="The minimum font size used for the tags, pr
 MOD_TAGS_POPULAR_FIELD_MINSIZE_LABEL="Minimum font size"
 MOD_TAGS_POPULAR_FIELD_NO_RESULTS_DESC="Will show a message if no matching tags are found instead of hiding the module."
 MOD_TAGS_POPULAR_FIELD_NO_RESULTS_LABEL="Show &quot;No results&quot; text"
-MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_COUNT="Number of Items"
+MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_COUNT="Theo số lượng bài được tag"
 MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_DESC="The order that tags will show in."
-MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_LABEL="Order"
-MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_RANDOM="Random"
-MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_TITLE="Title"
+MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_LABEL="Sắp xếp thứ tự"
+MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_RANDOM="Thứ tự ngẫu nhiên"
+MOD_TAGS_POPULAR_FIELD_ORDER_VALUE_TITLE="Thứ tự theo Tiêu đề"
 MOD_TAGS_POPULAR_FIELD_TIMEFRAME_DESC="Thiết lập khoảng thời gian mà để tính toán phổ biến"
 MOD_TAGS_POPULAR_FIELD_TIMEFRAME_LABEL="Khoảng thời gian"
 MOD_TAGS_POPULAR_FIELDSET_CLOUD_LABEL="Cloud Layout"
-MOD_TAGS_POPULAR_MAX_DESC="Thiết lập số lượng tối đa của thẻ để hiển thị trong các module"
-MOD_TAGS_POPULAR_MAX_LABEL="Số thẻ tối đa"
+MOD_TAGS_POPULAR_MAX_DESC="Thiết lập số lượng tối đa của Tag để hiển thị trong các module"
+MOD_TAGS_POPULAR_MAX_LABEL="Số Tag tối đa"
 MOD_TAGS_POPULAR_NO_ITEMS_FOUND="No Tags found."
-MOD_TAGS_POPULAR_XML_DESCRIPTION="This Module displays tags used on the site in a list or a cloud layout. Tags can be ordered by title or by the number of tagged items and limited to a specific time period."
+MOD_TAGS_POPULAR_XML_DESCRIPTION="Module Các tag phổ biến hiển thị các tag mà sử dụng nhiều nhất trên website."
+MOD_TAGS_POPULAR_PARENT_TAG_LABEL="Tag cha (để trống để chọn tất cả)"
