--- a/admin_vi-VN/vi-VN.ini
+++ b/admin_vi-VN/vi-VN.ini
@@ -833,7 +833,7 @@ JTOOLBAR_REFRESH_CACHE="Refresh Cache"
 JTOOLBAR_REMOVE="Hủy bỏ"
 JTOOLBAR_SAVE="Lưu và thoát"
 JTOOLBAR_SAVE_AND_NEW="Lưu & thêm mới"
-JTOOLBAR_SAVE_AS_COPY="Lưu Sao chép"
+JTOOLBAR_SAVE_AS_COPY="Tạo bản sao"
 JTOOLBAR_UNARCHIVE="Giải nén"
 JTOOLBAR_VERSIONS="Versions"
 JTOOLBAR_UNINSTALL="Gỡ bỏ cài đặt"
