--- a/site_vi-VN/vi-VN.com_users.ini
+++ b/site_vi-VN/vi-VN.com_users.ini
@@ -42,7 +42,7 @@ COM_USERS_FIELD_RESET_PASSWORD2_DESC="Xác nhận lại mật khẩu mới"
 COM_USERS_FIELD_RESET_PASSWORD2_LABEL="Xác nhận mật khẩu:"
 COM_USERS_INVALID_EMAIL="Địa chỉ Email không hợp lệ"
 COM_USERS_LOGIN_REMEMBER_ME="Remember me"
-COM_USERS_LOGIN_REGISTER="Bạn chưa có tài khoản?"
+COM_USERS_LOGIN_REGISTER="Đăng ký thành viên"
 COM_USERS_LOGIN_REMIND="Quên Tên đăng nhập?"
 COM_USERS_LOGIN_RESET="Quên mật khẩu?"
 COM_USERS_LOGIN_USERNAME_LABEL="Tên đăng nhập"
@@ -61,10 +61,10 @@ COM_USERS_MAIL_SEND_FAILURE_SUBJECT="Lỗi gửi email"
 COM_USERS_OPTIONAL="(Tùy chọn)"
 COM_USERS_OR="hoặc"
 COM_USERS_PROFILE_BIND_FAILED="Could not bind profile data: $s"
-COM_USERS_PROFILE="Thông tin cá nhân"
-COM_USERS_PROFILE_CORE_LEGEND="Thông tin cá nhân"
-COM_USERS_PROFILE_CUSTOM_LEGEND="Chỉnh sửa thông tin cá nhân"
-COM_USERS_PROFILE_DEFAULT_LABEL="Sửa thông tin của bạn"
+COM_USERS_PROFILE="Thông tin tài khoản"
+COM_USERS_PROFILE_CORE_LEGEND="Thông tin tài khoản"
+COM_USERS_PROFILE_CUSTOM_LEGEND="Chỉnh sửa thông tin tài khoản"
+COM_USERS_PROFILE_DEFAULT_LABEL="Sửa thông tin tài khoản"
 COM_USERS_PROFILE_EMAIL1_DESC="Nhập địa chỉ email của bạn"
 COM_USERS_PROFILE_EMAIL1_LABEL="Địa chỉ email:"
 COM_USERS_PROFILE_EMAIL1_MESSAGE="Địa chỉ email đã được sử dụng hoặc không hợp lệ. Vui lòng nhập địa chỉ email khác."
