--- a/admin_vi-VN/vi-VN.com_joomlaupdate.ini
+++ b/admin_vi-VN/vi-VN.com_joomlaupdate.ini
@@ -33,9 +33,9 @@ COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_HOSTNAME="FTP host"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_PASSWORD="FTP mật khẩu"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_PORT="FTP cổng"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_FTP_USERNAME="FTP tên đăng nhập"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLED="Cài đặt! phiên bản"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLED="Phiên bản hiện tại của bạn"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_INSTALLUPDATE="Cài đặt bản cập nhật"
-COM_JOOMLAUPDATE_VIEW_DEFAULT_LATEST="Phiên bản mới nhất! phiên bản"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_LATEST="Phiên bản mới nhất"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_METHOD="Phương pháp cài đặt"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_METHOD_DIRECT="Ghi các tập tin trực tiếp"
 COM_JOOMLAUPDATE_VIEW_DEFAULT_METHOD_FTP="Ghi các tập tin bằng cách sử dụng FTP"
@@ -51,3 +51,10 @@ COM_JOOMLAUPDATE_VIEW_UPDATE_FILESEXTRACTED="File trích xuất"
 COM_JOOMLAUPDATE_VIEW_UPDATE_INPROGRESS="Cập nhật phiên bản mới"
 COM_JOOMLAUPDATE_VIEW_UPDATE_PERCENT="Percent complete"
 COM_JOOMLAUPDATE_XML_DESCRIPTION="Cập nhật website phiên bản mới nhất chỉ với một cú click chuột"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATE_NOTICE="<br>Việc cập nhật bộ nhân hệ thống đôi khi, trong một vài trường hợp sẽ gây sự cố lên các app bên ngoài mà bạn sử dụng. Để đề phòng tình huống đó, và để có thể khôi phục ngay lại các hoạt động của website, khuyến cáo bạn nên tạo bản <strong>BACKUP - sao lưu hệ thống</strong> trước khi cài dặt bản nâng cấp này."
+COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_ONLINE="Nâng cấp trực tiếp"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPDATES_INFO_DEFAULT=""
+COM_JOOMLAUPDATE_VIEW_DEFAULT_TAB_UPLOAD="Upload thủ công để Cập nhật"
+COM_JOOMLAUPDATE_VIEW_UPLOAD_PACKAGE_FILE="Chọn gói file nâng cấp"
+COM_JOOMLAUPDATE_VIEW_DEFAULT_UPLOAD_INTRO="Nếu việc nâng cấp trực tiếp không thể hoàn thành, bạn hãy dùng chức năng Upload thủ công này."
+COM_JOOMLAUPDATE_TOOLBAR_CHECK="Kiểm tra gói cập nhật"
