--- a/admin_vi-VN/vi-VN.com_menus.ini
+++ b/admin_vi-VN/vi-VN.com_menus.ini
@@ -8,7 +8,7 @@ COM_MENUS_ACTION_COLLAPSE="Collapse"
 COM_MENUS_ACTION_DESELECT="Deselect"
 COM_MENUS_ACTION_EXPAND="Expand"
 COM_MENUS_ACTION_SELECT="Select"
-COM_MENUS_ADD_MENU_MODULE="Thêm một module vào nhánh menu này"
+COM_MENUS_ADD_MENU_MODULE="Thêm một module vào menu này"
 COM_MENUS_ADMIN_ACCESS_DESC="Lọc theo phân cấp quyền hành."
 COM_MENUS_ADMIN_ACCESS_LABEL="Access"
 COM_MENUS_ADMIN_AUTHOR_DESC="Lọc theo người tạo"
@@ -102,7 +102,7 @@ COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_DESC="An optional, custom description for the 
 COM_MENUS_ITEM_FIELD_ANCHOR_TITLE_LABEL="Link Title Attribute"
 COM_MENUS_ITEM_FIELD_ANCHOR_REL_DESC="An optional, custom rel attribute to get more information about the menu hyperlink (search engines purpose)."
 COM_MENUS_ITEM_FIELD_ANCHOR_REL_LABEL="Link Rel Attribute"
-COM_MENUS_ITEM_FIELD_ASSIGNED_DESC="Chọn cây menu tại đây, các nhánh menu sẽ hiển thị ở field bên dưới cho bạn chọn tiếp"
+COM_MENUS_ITEM_FIELD_ASSIGNED_DESC="Chọn cây menu tại đây, các menu sẽ hiển thị ở field bên dưới cho bạn chọn tiếp"
 COM_MENUS_ITEM_FIELD_ASSIGNED_LABEL="Chọn Cây Menu"
 COM_MENUS_ITEM_FIELD_ASSOCIATION_NO_VALUE="- No association -"
 COM_MENUS_ITEM_FIELD_BROWSERNAV_DESC="Thiết lập này cách mà link sẽ được mở: mặc định mở trong cửa sổ hiện tại, hoặc bật link lên trong một cửa sổ mới"
@@ -115,7 +115,7 @@ COM_MENUS_ITEM_FIELD_HIDE_UNASSIGNED_LABEL="Modules không có tương tác"
 COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED="Hide Unpublished Modules"
 COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED_DESC="Chọn ẩn để ẩn danh sách các module chưa được bật."
 COM_MENUS_ITEM_FIELD_HIDE_UNPUBLISHED_LABEL="Modules chưa được bật"
-COM_MENUS_ITEM_FIELD_HOME_DESC="Cẩn thận: nếu bạn chọn YES, nhánh menu này sẽ trở thành trang chủ (trang đầu tiên hiển thị khi truy cập website)."
+COM_MENUS_ITEM_FIELD_HOME_DESC="Cẩn thận: nếu bạn chọn YES, menu này sẽ trở thành trang chủ (trang đầu tiên hiển thị khi truy cập website)."
 COM_MENUS_ITEM_FIELD_HOME_LABEL="Chọn đây là TRANG CHỦ"
 COM_MENUS_ITEM_FIELD_LANGUAGE_DESC="Assign a language to this menu item."
 COM_MENUS_ITEM_FIELD_LINK_DESC="Tùy theo điểm kết nối mà hệ thống sẽ tự động xây dựng cấu trúc link sơ cấp, hoặc bạn sẽ cần phải nhập bằng tay"
@@ -128,8 +128,8 @@ COM_MENUS_ITEM_FIELD_MENU_SHOW_DESC="Select 'No' if you want to hide this menu i
 COM_MENUS_ITEM_FIELD_MENU_SHOW_LABEL="Display in Menu"
 COM_MENUS_ITEM_FIELD_MENU_TEXT_DESC="If the optional image is added, adds the menu title next to the image. Default is 'Yes'."
 COM_MENUS_ITEM_FIELD_MENU_TEXT_LABEL="Add Menu Title"
-COM_MENUS_ITEM_FIELD_NOTE_DESC="Vùng ghi chú nội bộ, bạn sẽ thấy phần ghi phú này khi quản lý các nhánh menu."
-COM_MENUS_ITEM_FIELD_ORDERING_DESC="Vị trí nhánh menu sẽ nằm dưới nhánh menu mà bạn chọn."
+COM_MENUS_ITEM_FIELD_NOTE_DESC="Vùng ghi chú nội bộ, bạn sẽ thấy phần ghi phú này khi quản lý các menu."
+COM_MENUS_ITEM_FIELD_ORDERING_DESC="Vị trí menu này sẽ nằm dưới menu mà bạn chọn."
 COM_MENUS_ITEM_FIELD_ORDERING_LABEL="Sắp xếp vị trí"
 COM_MENUS_ITEM_FIELD_ORDERING_TEXT="Ordering will be available after saving."
 COM_MENUS_ITEM_FIELD_ORDERING_VALUE_FIRST="- First -"
@@ -140,24 +140,24 @@ COM_MENUS_ITEM_FIELD_PAGE_HEADING_DESC="Optional alternative text for the Page h
 COM_MENUS_ITEM_FIELD_PAGE_HEADING_LABEL="Page Heading"
 COM_MENUS_ITEM_FIELD_PAGE_TITLE_DESC="Optional text for the &quot;Browser page title&quot; element. If blank, a default value is used based on the Menu Item Title."
 COM_MENUS_ITEM_FIELD_PAGE_TITLE_LABEL="Browser Page Title"
-COM_MENUS_ITEM_FIELD_PARENT_DESC="Để mặc định, nhánh menu sẽ là nhánh chính. Hoặc chọn vào một nhánh trong danh sachs, menu này sẽ trở thành nhánh con của menu mà bạn chọn."
-COM_MENUS_ITEM_FIELD_PARENT_LABEL="Thiết lập Nhánh menu chính - nhánh menu con"
+COM_MENUS_ITEM_FIELD_PARENT_DESC="Để mặc định, menu sẽ là menu chính. Hoặc chọn vào một menu trong danh sách, menu này sẽ trở thành menu con của menu mà bạn chọn."
+COM_MENUS_ITEM_FIELD_PARENT_LABEL="Thiết lập menu chính - menu con"
 COM_MENUS_ITEM_FIELD_SECURE_DESC="Selects if this link should use HTTPS (encrypted HTTP connections with the https:// protocol prefix). Note, you must have HTTPS enabled on your server to utilise this option."
 COM_MENUS_ITEM_FIELD_SECURE_LABEL="Secure"
 COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_DESC="Show or hide the Browser Page Title in the heading of the page ( If no optional text entered - will default to value based on the Menu Item Title ). The Page heading is usually displayed inside the &quot;H1&quot; tag."
 COM_MENUS_ITEM_FIELD_SHOW_PAGE_HEADING_LABEL="Show Page Heading"
-COM_MENUS_ITEM_FIELD_TEMPLATE_DESC="Mặc định giao diện sẽ sử dụng giao diện mà bạn đã kích hoạt cho site ở mục giao diện. Hoặc bạn có thể chọn cố định bất cứ giao diện nào khác đã được cài đặt trên hệ thống cho trang web khi mở nhánh menu này."
+COM_MENUS_ITEM_FIELD_TEMPLATE_DESC="Mặc định giao diện sẽ sử dụng giao diện mà bạn đã kích hoạt cho site ở mục giao diện. Hoặc bạn có thể chọn cố định bất cứ giao diện nào khác đã được cài đặt trên hệ thống cho trang web khi mở menu này."
 COM_MENUS_ITEM_FIELD_TEMPLATE_LABEL="Giao diện"
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_DESC="Choose whether this separator will be displayed as a label. If the title has only dashes (-) and spaces, it will not be displayed as a label."
 COM_MENUS_ITEM_FIELD_TEXT_SEPARATOR_LABEL="Display as a label"
 COM_MENUS_ITEM_FIELD_TITLE_DESC="The title of the menu item that will display in the menu."
-COM_MENUS_ITEM_FIELD_TITLE_LABEL="Tên nhánh menu"
-COM_MENUS_ITEM_FIELD_TYPE_DESC="Chọn điểm kết nối bên trong hệ thống mà nhánh menu này tạo đường kết nối vào."
+COM_MENUS_ITEM_FIELD_TITLE_LABEL="Tên menu"
+COM_MENUS_ITEM_FIELD_TYPE_DESC="Chọn điểm kết nối bên trong hệ thống mà menu này tạo đường kết nối vào."
 COM_MENUS_ITEM_FIELD_TYPE_LABEL="Điểm kết nối"
 COM_MENUS_ITEM_IS_DEFAULT="Is default"
 COM_MENUS_ITEM_MODULE_ASSIGNMENT="Tương tác Module"
 COM_MENUS_ITEM_REQUIRED="Required"
-COM_MENUS_ITEM_ROOT="là nhánh menu chính"
+COM_MENUS_ITEM_ROOT="là menu chính"
 COM_MENUS_ITEMS_REBUILD_FAILED="Failed rebuilding Menu Items list."
 COM_MENUS_ITEMS_REBUILD_SUCCESS="Menu items list rebuilt."
 COM_MENUS_ITEMS_SEARCH_FILTER="Search in title, alias and notes. Prefix with ID: to search for a menu item ID."
@@ -223,8 +223,8 @@ COM_MENUS_SELECT_MENU="- Chọn Cây Menu -"
 COM_MENUS_SELECT_MENU_FILTER_NOT_TRASHED="Filter the list by a state other than trashed or clear the filter."
 COM_MENUS_SELECT_MENU_FIRST="To use batch processing, please first select a Menu in the manager."
 COM_MENUS_SELECT_MENU_FIRST_EXPORT="To use export, please first select a valid Menu in the manager."
-COM_MENUS_SUBMENU_ITEMS="Các nhánh menu"
-COM_MENUS_SUBMENU_MENUS="Cây Menu"
+COM_MENUS_SUBMENU_ITEMS="Danh sách các menu"
+COM_MENUS_SUBMENU_MENUS="CÂY MENU"
 COM_MENUS_SUCCESS_REORDERED="Menu item reordered."
 COM_MENUS_TIP_ALIAS_LABEL="<strong>Warning!</strong><br />Leave the alias field empty if the menu item alias and the menu item linked to by the alias have the same parent."
 COM_MENUS_TIP_ASSOCIATION="Associated menu items"
@@ -232,7 +232,7 @@ COM_MENUS_TITLE_EDIT_ITEM="Menu Manager: Title Edit Item"
 COM_MENUS_TITLE_TRANSLATION="Title (%s)"
 COM_MENUS_TOOLBAR_SET_HOME="Home"
 COM_MENUS_TYPE_ALIAS="Menu Item Alias"
-COM_MENUS_TYPE_ALIAS_DESC="Tạo ra một menu liên kết đến một nhánh menu bạn đã tạo trước đó."
+COM_MENUS_TYPE_ALIAS_DESC="Tạo ra một menu liên kết đến một menu bạn đã tạo trước đó."
 COM_MENUS_TYPE_CHOOSE="Select a Menu Item Type:"
 COM_MENUS_TYPE_CONTAINER="Components Menu Container"
 COM_MENUS_TYPE_CONTAINER_DESC="This will create a container menu which will show the items in the protected menu type 'main'. You can also selectively hide or show menu items."
@@ -247,8 +247,8 @@ COM_MENUS_TYPE_UNEXISTING="Component '%s' does not exist."
 COM_MENUS_TYPE_UNKNOWN="Unknown"
 COM_MENUS_VIEW_EDIT_ITEM_TITLE="Menus: Edit Item"
 COM_MENUS_VIEW_EDIT_MENU_TITLE="Menus: Edit"
-COM_MENUS_VIEW_ITEMS_ALL_TITLE="Xem tất cả các nhánh menu"
-COM_MENUS_VIEW_ITEMS_MENU_TITLE="Các nhánh menu của Cây Menu **%s**"
+COM_MENUS_VIEW_ITEMS_ALL_TITLE="Xem tất cả các menu"
+COM_MENUS_VIEW_ITEMS_MENU_TITLE="Các menu thuộc Cây Menu **%s**"
 COM_MENUS_VIEW_ITEMS_TITLE="Menus: Items"
 COM_MENUS_VIEW_MENUS_TITLE="Menus"
 COM_MENUS_VIEW_NEW_ITEM_TITLE="Menus: New Item"
