--- a/admin_vi-VN/vi-VN.com_templates.ini
+++ b/admin_vi-VN/vi-VN.com_templates.ini
@@ -94,8 +94,8 @@ COM_TEMPLATES_FIELD_SOURCE_DESC="Source code"
 COM_TEMPLATES_FIELD_SOURCE_LABEL="Source Code"
 COM_TEMPLATES_FIELD_TEMPLATE_DESC="Template Name"
 COM_TEMPLATES_FIELD_TEMPLATE_LABEL="Template"
-COM_TEMPLATES_FIELD_TITLE_DESC="Style Name"
-COM_TEMPLATES_FIELD_TITLE_LABEL="Style Name"
+COM_TEMPLATES_FIELD_TITLE_DESC="Tên giao diện"
+COM_TEMPLATES_FIELD_TITLE_LABEL="Tên giao diện"
 COM_TEMPLATES_FILE_ARCHIVE_OPEN_FAIL="Failed to open the archive file."
 COM_TEMPLATES_FILE_ARCHIVE_EXISTS="Some files with the same name already exist."
 COM_TEMPLATES_FILE_ARCHIVE_NOT_FOUND="Archive file not found."
@@ -159,7 +159,7 @@ COM_TEMPLATES_MANAGER_TEMPLATES="Quản lý giao diện: Templates"
 COM_TEMPLATES_MANAGER_VIEW_TEMPLATE="Quản lý giao diện: Customise Template"
 COM_TEMPLATES_MENU_CHANGED_1="One menu item has been assigned or unassigned to this style"
 COM_TEMPLATES_MENU_CHANGED_MORE="%d menu items have been assigned or unassigned to this style"
-COM_TEMPLATES_MENUS_ASSIGNMENT="Menus assignment"
+COM_TEMPLATES_MENUS_ASSIGNMENT="Áp dụng vào Menu"
 COM_TEMPLATES_MODAL_FILE_DELETE="The file %s will be deleted."
 COM_TEMPLATES_MSG_MANAGE_NO_TEMPLATES="There are no templates installed matching your query"
 COM_TEMPLATES_MSG_MANAGE_NO_STYLES="There are no styles installed matching your query"
@@ -221,3 +221,14 @@ COM_TEMPLATES_TOGGLE_FULL_SCREEN="Press Ctrl-Q to toggle Full Screen editing."
 COM_TEMPLATES_TOOLBAR_SET_HOME="Make Default"
 COM_TEMPLATES_XML_DESCRIPTION="Thành phần này quản lý mẫu"
 JLIB_RULES_SETTING_NOTES="1. Nếu bạn thay đổi thiết lập, nó sẽ cập nhật vào component này. Chú ý:<br /><em>Inherited</em> nghĩa là quyền được lấy từ cấu hình chung và nhóm cha. <br /><em>Denied</em> nghĩa là không có bất cứ ảnh hưởng nào từ cấu hình chung, nhóm cha, nhóm đã được sửa chữa không thể tác động trong component này.<br /><em>Allowed</em> nghĩa là các nhóm đã được sửa chữa sẽ có thể tác động tới component này (nhưng nếu bị xung độ với cấu hình chung hoặc nhóm cha thì sẽ không bị ảnh hưởng; một xung độ sẽ được định nghĩa bởi <em>Not Allowed (Locked)</em> dưới thiết lập đã được tính trước).<br />2. Nếu bạn lựa chọn thiết lập mới, nhấn <em>Save</em> để làm mới các thiết lập được tính trước."
+JAPPLY="Cập nhật"
+JTOOLBAR_APPLY="Cập nhật"
+COM_TEMPLATES_STYLES_PAGES_ALL="Giao diện mặc định"
+COM_TEMPLATES_STYLES_PAGES_NONE="Chưa sử dụng"
+COM_TEMPLATES_STYLES_PAGES_SELECTED="Sử dụng cho %s menu"
+JDETAILS="Cơ bản"
+JGLOBAL_FIELDSET_ADVANCED="Mở rộng"
+JGLOBAL_SHOW_FULL_DESCRIPTION="Xem đầy đủ mô tả"
+JGLOBAL_FIELDSET_DESCRIPTION="Mô tả thông tin giao diện"
+JGLOBAL_SELECTION_INVERT_ALL="Chọn tất cả"
+JGLOBAL_SELECTION_INVERT="Chọn tất cả trong cây menu này"
