--- a/admin_vi-VN/vi-VN.mod_menu.ini
+++ b/admin_vi-VN/vi-VN.mod_menu.ini
@@ -93,10 +93,10 @@ MOD_MENU_LOGOUT="Đăng xuất"
 MOD_MENU_MASS_MAIL_USERS="Gửi thư cho thành viên"
 MOD_MENU_MEDIA_MANAGER="Quản lý ảnh và file"
 MOD_MENU_MENUS="Menu & Cây Menu"
-MOD_MENU_MENUS_ALL_ITEMS="Tất cả nhánh menu"
+MOD_MENU_MENUS_ALL_ITEMS="Tất cả menu"
 MOD_MENU_MENU_MANAGER="Quản lý Cây Menu"
 MOD_MENU_MENU_MANAGER_NEW_MENU="Thêm Cây Menu mới"
-MOD_MENU_MENU_MANAGER_NEW_MENU_ITEM="Thêm nhánh menu mới"
+MOD_MENU_MENU_MANAGER_NEW_MENU_ITEM="Thêm menu mới"
 MOD_MENU_NEW_PRIVATE_MESSAGE="Tin nhắn mới"
 MOD_MENU_PURGE_EXPIRED_CACHE="Purge Expired Cache"
 MOD_MENU_READ_PRIVATE_MESSAGES="Đọc tin nhắn cá nhân"
