Fix language com update

--- a/admin_vi-VN/vi-VN.com_installer.ini
+++ b/admin_vi-VN/vi-VN.com_installer.ini
@@ -29,7 +29,7 @@ COM_INSTALLER_HEADER_DISCOVER="Quản lý mở rộng: Khám phá"
 COM_INSTALLER_HEADER_INSTALL="Quản lý mở rộng: Cài đặt"
 COM_INSTALLER_HEADER_LANGUAGES="Install Accredited Language Translations"
 COM_INSTALLER_HEADER_MANAGE="Quản lý mở rộng: Quản lý"
-COM_INSTALLER_HEADER_UPDATE="Quản lý mở rộng: Cập nhật"
+COM_INSTALLER_HEADER_UPDATE="Nâng cấp App"
 COM_INSTALLER_HEADER_WARNINGS="Quản lý mở rộng: Cảnh báo"
 COM_INSTALLER_HEADING_CLIENT="Khách hàng"
 COM_INSTALLER_HEADING_DETAILS_URL="Details URL"
@@ -99,9 +99,9 @@ COM_INSTALLER_MSG_LANGUAGES_TRY_LATER="Hãy thử lại sau hoặc <a href="_QQ_
 COM_INSTALLER_MSG_MANAGE_NOEXTENSION="Không có phần mở rộng được cài đặt phù hợp với truy vấn của bạn"
 COM_INSTALLER_MSG_UPDATE_ERROR="Error updating %s."
 COM_INSTALLER_MSG_UPDATE_NODESC="Không có mô tả cho ứng dụng này."
-COM_INSTALLER_MSG_UPDATE_NOUPDATES="Không có thông tin cập nhật có sẵn tại thời điểm này. Xin vui lòng kiểm tra lại sau."
-COM_INSTALLER_MSG_UPDATE_SUCCESS="Updating %s was successful."
-COM_INSTALLER_MSG_UPDATE_UPDATE="Cập nhật"
+COM_INSTALLER_MSG_UPDATE_NOUPDATES="Danh sách trống, tức là các app trên web đã là phiên bản mới nhất. Bạn có thể yêu cầu tra cứu các bản phát hành nâng cấp bằng cách click vào nút [Clear Cache] sau đó bấm vào nút [Tìm thông tin nâng cấp] "
+COM_INSTALLER_MSG_UPDATE_SUCCESS="Đã nâng cấp thành công app %s"
+COM_INSTALLER_MSG_UPDATE_UPDATE="Nâng cấp"
 COM_INSTALLER_MSG_WARNINGS_FILEUPLOADSDISABLED="File cập nhật bị vô hiệu hóa"
 COM_INSTALLER_MSG_WARNINGS_FILEUPLOADISDISABLEDDESC="File uploads are required to upload extensions into the installer."
 COM_INSTALLER_MSG_WARNINGFURTHERINFO="Further information on warnings"
@@ -118,7 +118,7 @@ COM_INSTALLER_MSG_WARNINGS_SMALLPOSTSIZE="Small PHP maximum POST size"
 COM_INSTALLER_MSG_WARNINGS_SMALLPOSTSIZEDESC="The maximum POST size sets the most amount of data that can be sent via POST to the server. This includes form submissions for articles, media (images, videos) and extensions. This value is less than 2MB which may impact on uploading large extensions. This is set in the php.ini under post_max_size"
 COM_INSTALLER_MSG_WARNINGS_SMALLUPLOADSIZE="Small PHP file upload size"
 COM_INSTALLER_MSG_WARNINGS_SMALLUPLOADSIZEDESC="The maximum file size for uploads is set to less than 2MB which may impact on uploading large extensions."
-COM_INSTALLER_MSG_WARNINGS_UPDATE_NOTICE="Before updating ensure that the update is compatible with your Joomla! installation. If updating Joomla!, ensure installed extensions are available for the new Joomla! version."
+COM_INSTALLER_MSG_WARNINGS_UPDATE_NOTICE="Hãy luôn cập nhật các App lên phiên bản mới nhất để có các tính năng mới và các bản vá bảo mật. Click chọn các App bạn muốn nâng cấp, sau đó bấm vào nút [Nâng cấp]"
 COM_INSTALLER_MSG_WARNINGS_UPLOADBIGGERTHANPOST="PHP Upload Size bigger than POST size"
 COM_INSTALLER_MSG_WARNINGS_UPLOADBIGGERTHANPOSTDESC="The value of the upload_max_filesize in the php.ini file is greater than the post_max_size variable. The post_max_size variable will take precedence here and block requests larger than it. This is generally a server misconfiguration when trying to increase upload sizes. Please increase the upload_max_filesize to at least match the post_max_size variable or vice versa"
 COM_INSTALLER_MSG_WARNINGS_NONE="No warnings detected"
@@ -145,7 +145,7 @@ COM_INSTALLER_SHOW_JED_INFORMATION_TOOLTIP="Opens Installer Options for setting 
 COM_INSTALLER_SUBMENU_DISCOVER="Khám phá"
 COM_INSTALLER_SUBMENU_INSTALL="Cài đặt"
 COM_INSTALLER_SUBMENU_MANAGE="Quản lý"
-COM_INSTALLER_SUBMENU_UPDATE="Cập nhật"
+COM_INSTALLER_SUBMENU_UPDATE="Nâng cấp"
 COM_INSTALLER_SUBMENU_WARNINGS="Cảnh báo"
 COM_INSTALLER_TITLE_DATABASE="Quản lý mở rộng - Cơ sở dữ liệu"
 COM_INSTALLER_TITLE_DISCOVER="Mở rộng quản lý - Khám phá"
@@ -155,8 +155,8 @@ COM_INSTALLER_TITLE_MANAGE="Mở rộng quản lý - Quản lý"
 COM_INSTALLER_TITLE_UPDATE="Mở rộng quản lý - Cập nhật"
 COM_INSTALLER_TITLE_WARNINGS="Mở rộng quản lý - Cảnh báo"
 COM_INSTALLER_TOOLBAR_DISCOVER="Khám phá"
-COM_INSTALLER_TOOLBAR_FIND_UPDATES="Tìm thông tin cập nhật"
-COM_INSTALLER_TOOLBAR_UPDATE="Cập nhật"
+COM_INSTALLER_TOOLBAR_FIND_UPDATES="Tìm thông tin nâng cấp"
+COM_INSTALLER_TOOLBAR_UPDATE="Nâng cấp"
 COM_INSTALLER_TOOLBAR_DATABASE_FIX="Sửa chữa"
 COM_INSTALLER_TYPE_CLIENT="Vị trí"
 COM_INSTALLER_TYPE_COMPONENT="Thành phần mở rộng"
