--- a/admin_vi-VN/vi-VN.com_joomlaupdate.ini
+++ b/admin_vi-VN/vi-VN.com_joomlaupdate.ini
@@ -16,7 +16,7 @@ COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_NOCHANGE="Cấu hình hiện tại (không 
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_STS="Hỗ trợ ngắn hạn"
 COM_JOOMLAUPDATE_CONFIG_UPDATESOURCE_TESTING="Thử nghiệm"
 COM_JOOMLAUPDATE_CONFIGURATION="Joomla! Update Configuration"
-COM_JOOMLAUPDATE_OVERVIEW="Cập nhật phiên bản mới"
+COM_JOOMLAUPDATE_OVERVIEW="Nâng cấp nhân hệ thống"
 COM_JOOMLAUPDATE_UPDATE_LOG_CLEANUP="Cleaning up after installation."
 COM_JOOMLAUPDATE_UPDATE_LOG_COMPLETE="Update to version %s is complete."
 COM_JOOMLAUPDATE_UPDATE_LOG_DELETE_FILES="Deleting removed files and folders."
