--- a/admin_vi-VN/vi-VN.plg_quickicon_extensionupdate.ini
+++ b/admin_vi-VN/vi-VN.plg_quickicon_extensionupdate.ini
@@ -11,3 +11,5 @@ PLG_QUICKICON_EXTENSIONUPDATE_GROUP_LABEL="Nhóm"
 PLG_QUICKICON_EXTENSIONUPDATE_UPDATEFOUND="Có <span class='label label-important'>%s</span> gói nâng cấp app"
 PLG_QUICKICON_EXTENSIONUPDATE_UPTODATE="Tất cả các App đã được cập nhật phiên bản mới nhất"
 PLG_QUICKICON_EXTENSIONUPDATE_XML_DESCRIPTION="Kiểm tra các bản cập nhật của chương trình đã cài đặt Extensions của bên thứ ba và thông báo cho bạn khi bạn truy cập vào trang Control Panel"
+PLG_QUICKICON_EXTENSIONUPDATE_UPDATEFOUND_BUTTON="Nâng cấp App"
+PLG_QUICKICON_EXTENSIONUPDATE_UPDATEFOUND_MESSAGE="Có <span class='label label-important'>%s</span> App đã có bản phát hành nâng cấp phiên bản mới"
