--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 EXTENSION_NAME=vn-VN
-EXTENSION_ALIAS=vn-VN
+EXTENSION_ALIAS=vn-vn
 EXTENSION_CLASS_NAME=XirowebXiroadmin
 EXTENSION_DESC=Xiroadmin Administrator Template
 EXTENSION_NAMESPACE=Xiroweb
